# mcpmark-lite-rft-example

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
benchmark/: __init__.py  test_mcp_filesystem_rft.py  verifier.py
data/: tasks.jsonl
mcp_config/: task_files_stdio.json
mcp_server/: __init__.py  task_files_server.py
scripts/: materialize_rft_dataset.py  monitor_rft_job.py
tests/: test_verifier.py
